--- a/src/styles.css
+++ b/src/styles.css
@@ -111,7 +111,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
-  background-color: #f5f6f8;
+  background-color: #313131;
 }
 svg tspan {
   font-family: "Roboto", sans-serif;
